@@ -1,5 +1,5 @@
 /*
- * "$Id: conf.c,v 1.145 2004/04/20 13:34:49 mike Exp $"
+ * "$Id: conf.c,v 1.146 2004/05/13 20:21:45 mike Exp $"
  *
  *   Configuration routines for the Common UNIX Printing System (CUPS).
  *
@@ -1224,9 +1224,13 @@ read_configuration(cups_file_t *fp)	/* I - File to read from */
 	if (value[0] == '*')
 	  value ++;
 
+        strlcpy(name, value, sizeof(name));
+	if ((nameptr = strchr(name, ' ')) != NULL)
+	  *nameptr = '\0';
+
         relay->from.type             = AUTH_NAME;
-	relay->from.mask.name.name   = strdup(value);
-	relay->from.mask.name.length = strlen(value);
+	relay->from.mask.name.name   = strdup(name);
+	relay->from.mask.name.length = strlen(name);
       }
       else
       {
@@ -2172,5 +2176,5 @@ CDSAGetServerCerts(void)
 
 
 /*
- * End of "$Id: conf.c,v 1.145 2004/04/20 13:34:49 mike Exp $".
+ * End of "$Id: conf.c,v 1.146 2004/05/13 20:21:45 mike Exp $".
  */
