@@ -3,6 +3,9 @@ CHANGES.txt - 05/13/2004
 
 CHANGES IN CUPS V1.1.21rc1
 
+	- The scheduler did not properly parse name-based
+	  BrowseRelay directives in the cupsd.conf file (STR
+	  #711)
 	- The IPP backend now supports the following options in
 	  the device URI: encryption, waitjob, and waitprinter
 	  (STR #699)
